# scikit-pattern

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  clostream.py  clostream_test.py  dev-requirementst.txt  lcm.py  lcm_scope.py  pyproject.toml  requirements.txt  setup.py  transformers.py
benchs/: bench_filters.ipynb  profile_clostream.py  profile_lcm.py  utils.py
skpattern/: __init__.py  clostream.py  lcm.py  lcm.pyx
skpattern/tests/: test_clostream.py  test_lcm.py
src/: clostream.py  profile_clostream.py  transformers.py
tests/: clostream_test.py
